oscen-macros/tests/ui/frame_turbofish_no_args.stderr
error: expected `(` after `Frame::<N>`
  --> tests/ui/frame_turbofish_no_args.rs:13:20
   |
13 |         Frame::<2> -> out;
   |                    ^

warning: unused import: `PolyBlepOscillator`
 --> tests/ui/frame_turbofish_no_args.rs:1:20
  |
1 | use oscen::{graph, PolyBlepOscillator};
  |                    ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
